name:                temp
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/temp#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  Build-depends:  base >=4 && <5
                , annotated-wl-pprint >= 0.7 && < 0.8
                , ansi-terminal < 0.7
                , ansi-wl-pprint < 0.7
                , base64-bytestring < 1.1
                , binary >= 0.7 && < 0.8
                , blaze-html >= 0.6.1.3 && < 0.9
                , blaze-markup >= 0.5.2.1 && < 0.8
                , bytestring < 0.11
                , cheapskate < 0.2
                , containers >= 0.5 && < 0.6
                , deepseq < 1.5
                , directory >= 1.2.2.0 && < 1.2.3.0 || > 1.2.3.0
                , filepath < 1.5
                , fingertree >= 0.1 && < 0.2
                , haskeline >= 0.7 && < 0.8
                , mtl >= 2.1 && < 2.3
                , network < 2.7
                , optparse-applicative
                , parsers >= 0.9 && < 0.13
                , pretty < 1.2
                , process < 1.3
                , split < 0.3
                , text >=1.2.1.0 && < 1.3
                , time >= 1.4 && < 1.6
                , transformers < 0.5
                , transformers-compat >= 0.3
                , trifecta >= 1.1 && < 1.6
                , uniplate >=1.6 && < 1.7
                , unordered-containers < 0.3
                , utf8-string < 1.1
                , vector < 0.12
                , vector-binary-instances < 0.3
                , zip-archive > 0.2.3.5 && < 0.2.4
                , zlib < 0.6
                , safe
                , libffi < 0.2
  default-language:    Haskell2010

executable temp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , temp
  default-language:    Haskell2010

test-suite temp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , temp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/temp
